readonly works for properties, but not recursively
